@@ -12,6 +12,8 @@ To be released as ELinks 0.13.0.
 
 * minor bug 54, Debian bug 338402: Don't force the terminal to 8 bits
   with no parity.
+* enhancement 867: Use bracketed paste mode on xterm.  This requires
+  xterm patch #228 or later configured with --enable-readline-mouse.
 
 ELinks 0.12.GIT now:
 --------------------
